fix .section1 img not centred

--- a/styles.css
+++ b/styles.css
@@ -59,21 +59,22 @@ body {
 }
 .website {
     display: flex;
+    justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: 40px;
     flex-wrap: wrap;
     padding: 70px 0;
 }
 
 .awesome {
     flex: 1;
-    align-items: flex-start;
+    align-self: center;
 }
 
 .section1 img  {
     height: 300px;
-    flex: 0 0 0 ;
-    align-items: stretch;
+    flex: 1;
+    align-items: center;
     max-width: 100%;
 }
 
@@ -175,7 +176,8 @@ body {
     justify-content: space-between;
     align-content: center;
     border-radius: 10px;
-    flex: 1;
+    flex-shrink: 0 0 1;
+    flex-wrap: wrap;
 }
 
 .join {
